-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0
-
VS2015 Express 32bit / Windows 10 Preview 10162
-
3aa5ef2ea92ccede193b89acc2ba7194a04df17d
Compiler warning
.\tst_qglobalstatic.cpp(59): warning C4197: '`anonymous-namespace'::Q_QGS_volatileInt::Type': top-level volatile in cast is ignored
produces
********* Start testing of tst_QGlobalStatic ********* Config: Using QtTest library 5.5.1, Qt 5.5.1 (i386-little_endian-ilp32 shared (dynamic) debug build; by MSVC 2015) PASS : tst_QGlobalStatic::initTestCase() PASS : tst_QGlobalStatic::beforeInitialization() PASS : tst_QGlobalStatic::api() PASS : tst_QGlobalStatic::constVolatile() PASS : tst_QGlobalStatic::exception()
VS 2012 does not hang on Windows 10, so it is a compiler issue.
| For Gerrit Dashboard: QTBUG-47224 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 121591,3 | Disable thread-safe statics for MSVC 2015: they're broken | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |