tests/auto/corelib/global/qglobalstatic/tst_qglobalstatic.cpp
@@ -50,7 +50,7 @@ private Q_SLOTS:
     void api();
     void constVolatile();
     void exception();
-    void threadedException();
+    void catchExceptionAndRetry();
     void threadStressTest();
     void afterDestruction();
 };
@@ -142,7 +142,7 @@ void tst_QGlobalStatic::exception()
 
 QBasicAtomicInt exceptionControlVar = Q_BASIC_ATOMIC_INITIALIZER(1);
 Q_GLOBAL_STATIC_WITH_ARGS(ThrowingType, exceptionGS, (exceptionControlVar))
-void tst_QGlobalStatic::threadedException()
+void tst_QGlobalStatic::catchExceptionAndRetry()
 {
     if (exceptionControlVar.load() != 1)
         QSKIP("This test cannot be run more than once");
